# magic-trace

./: .gitignore  dune  magic-trace.opam  magic-trace.opam.locked
.github/workflows/: build-deb.yml  build.yml
direct_backend/cinaps/: dune
lib/magic_trace/src/: dune
lib/magic_trace/test/: dune
src/: dune  env_vars.ml  env_vars.mli  event.ml  event.mli  interned_string.ml  interned_string.mli  llvm_symbolizer_stubs.cpp  new_trace_writer.ml  nonempty_vec.ml  nonempty_vec.mli  perf_decode.ml  real_trace.ml  slice.ml  slice.mli  symbolizer.ml  symbolizer.mli  trace.ml  trace.mli  trace_segment.ml  trace_segment.mli  trace_writer.ml  trace_writer_implementation_intf.ml  trace_writer_intf.ml
test/: dune  perf_script.ml  test.ml
test/sample-targets/long-running/: dune
test/sample-targets/ocaml-raise/: dune
